unpackaged/main/default/objects/Opportunity/fields/License_Turnaround_Days__c.field-meta.xml
<CustomField>
    <fullName>License_Turnaround_Days__c</fullName>
    <formula>Date_Time_License_Fulfilled__c  -  Date_Time_of_License_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Turnaround (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>