unpackaged/main/default/objects/Opportunity/fields/MainCompetitor__c.field-meta.xml
<CustomField>
    <fullName>MainCompetitor__c</fullName>
    <label>Main Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Telcor</fullName>
            </value>
            <value>
                <fullName>Aegis</fullName>
            </value>
            <value>
                <fullName>Precision Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>