unpackaged/main/default/objects/Opportunity/fields/Mark_For_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Mark_For_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to document an orders that need to go through a Order Cancellation Process</description>
    <label>Mark For Cancellation</label>
    <type>Checkbox</type>
</CustomField>