unpackaged/main/default/objects/Opportunity/fields/MDN_Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MDN_Trial_Expiration__c</fullName>
    <description>Field showing the date that at MDN Trial Expires</description>
    <label>MDN Trial Expiration</label>
    <type>Date</type>
</CustomField>