unpackaged/main/default/objects/Opportunity/fields/MDN_Trial_Program__c.field-meta.xml
<CustomField>
    <fullName>MDN_Trial_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to capture which prospective customers did a trial of MDN products prior to committing to a contract</description>
    <label>MDN Trial Program</label>
    <type>Checkbox</type>
</CustomField>