unpackaged/main/default/objects/Opportunity/fields/Migration_Consolidtion_Platform_Change__c.field-meta.xml
<CustomField>
    <fullName>Migration_Consolidtion_Platform_Change__c</fullName>
    <description>Field to document if the project involves server migration, server consoliditon, or platform change. WIll be used to project complexity scoring</description>
    <label>*Migration/Consolidtion/Platform Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Involves Server Migration or Consolidation (But no Platform Change)</fullName>
            </value>
            <value>
                <fullName>Involves Platform Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>