unpackaged/main/default/objects/Opportunity/fields/Module_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>Module_Deactivation_Date__c</fullName>
    <description>Field to track the date in which we will cut off a delinquent account.  This field will be used in the Deactivattion scheduled templates going out at the 30-day past due, with the actual cut off date at 60day past due mark</description>
    <label>Module Deactivation Date</label>
    <type>Date</type>
</CustomField>