unpackaged/main/default/objects/Opportunity/fields/Month_License_Approval_Submit__c.field-meta.xml
<CustomField>
    <fullName>Month_License_Approval_Submit__c</fullName>
    <formula>CASE( MONTH( Date_of_License_Approval_Submission__c ) ,
1, "A -JAN", 
2, "B -FEB",
3, "C -MAR",
4, "D -APRIL",
5, "E -MAY",
6,"F  -JUNE",
7, "G -JULY",
8, "H -AUG",
9, "I -SEPT",
10,"J -OCT",
11,"K -NOV",
12,"L -DEC","")</formula>
    <label>Month License Approval Submit</label>
    <type>Text</type>
</CustomField>