unpackaged/main/default/objects/Opportunity/fields/Month_Of_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_Expiration__c</fullName>
    <formula>MONTH( Contract_Expiration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Of Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>