unpackaged/main/default/objects/Opportunity/fields/Name_of_Person_Who_Signed_For_Letter__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person_Who_Signed_For_Letter__c</fullName>
    <description>Field that will capture the name and/or location associated with the signing for the certified letter or UPS delivery.  Data can be used to verify that the letter was received at the hospital even if the person it was addressed to didn't get the message.</description>
    <label>Name of Person Who Signed For Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>