unpackaged/main/default/objects/Opportunity/fields/Need_AIMS_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Need_AIMS_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need AIMS Reporting</label>
    <type>Checkbox</type>
</CustomField>