unpackaged/main/default/objects/Opportunity/fields/Need_EMR_Integration__c.field-meta.xml
<CustomField>
    <fullName>Need_EMR_Integration__c</fullName>
    <label>Need EMR Integration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>