unpackaged/main/default/objects/Opportunity/fields/Need_Review__c.field-meta.xml
<CustomField>
    <fullName>Need_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that will be filled by workflow.  Checkbox will document if operations needs to review a record prior to a project being created</description>
    <label>Needs Review By Operations Analyst</label>
    <type>Checkbox</type>
</CustomField>