unpackaged/main/default/objects/Opportunity/fields/New_Contract_or_Renewal__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_or_Renewal__c</fullName>
    <description>Field to segment revenue stream by New Business verses Renewals</description>
    <label>New Business or Renewal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal With Device Change</fullName>
            </value>
            <value>
                <fullName>Renewal With Platform Change(ie..Plus &gt; Freedom)</fullName>
            </value>
            <value>
                <fullName>Expansion of Existing Module License</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>