unpackaged/main/default/objects/Opportunity/fields/New_Installation_of_Module_Addition__c.field-meta.xml
<CustomField>
    <fullName>New_Installation_of_Module_Addition__c</fullName>
    <description>Field that will further define new business oppporunities</description>
    <label>New Installation or Addition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Contract_or_Renewal__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>New Installation (No System Installed Currently)</fullName>
            </value>
            <value>
                <fullName>Module Addition to Existing RALS System</fullName>
            </value>
            <value>
                <fullName>New Maintenance Agreement, No Agreement in place previously</fullName>
            </value>
            <value>
                <fullName>Facility Being added to existing Module</fullName>
            </value>
            <value>
                <fullName>Cartridges, Interfaces being added to existing Contract</fullName>
            </value>
            <value>
                <fullName>New Device Type Being Connected Through Aegis POC</fullName>
            </value>
            <value>
                <fullName>ADS Order --- additional meter connectivity</fullName>
            </value>
            <value>
                <fullName>Migration to RALS Plus/RALS Web3</fullName>
            </value>
            <value>
                <fullName>ADS Validation Project</fullName>
            </value>
            <value>
                <fullName>Aegis Support and Maintenance License</fullName>
            </value>
            <value>
                <fullName>Renewal With Device/Platform Change</fullName>
            </value>
            <value>
                <fullName>Not New Business</fullName>
            </value>
            <value>
                <fullName>LDAP Implementation Fee</fullName>
            </value>
            <value>
                <fullName>Cost Per Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>