unpackaged/main/default/objects/Opportunity/fields/New_License_Term_Start__c.field-meta.xml
<CustomField>
    <fullName>New_License_Term_Start__c</fullName>
    <description>Field will be used in mail merge renewal notifications to explain when new license term will begin (with new payment terms and conditions)</description>
    <formula>Contract_Expiration__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NewLicenseTermstart</label>
    <type>Date</type>
</CustomField>