unpackaged/main/default/objects/Opportunity/fields/NewRenewSegment__c.field-meta.xml
<CustomField>
    <fullName>NewRenewSegment__c</fullName>
    <description>Formula field that will segment opportunities based on whether it is a new business or not.</description>
    <formula>CASE( New_Contract_or_Renewal__c , 
"New Business", "New Business", 
"Expansion of Existing Module License", "Expansion", 
"Renewal")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Business or Renewal</label>
    <type>Text</type>
</CustomField>