unpackaged/main/default/objects/Opportunity/fields/No_Contingency__c.field-meta.xml
<CustomField>
    <fullName>No_Contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if there is no contingency pricing agreement</inlineHelpText>
    <label>No Contingency</label>
    <type>Checkbox</type>
</CustomField>