unpackaged/main/default/objects/Opportunity/fields/Non_Standard_System_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_System_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to document if the system has a non-standard configuration. Examples: They use their own hardware, they don't have remote access and require onsite install</description>
    <label>* Non-Standard System Configuration</label>
    <type>Checkbox</type>
</CustomField>