unpackaged/main/default/objects/Opportunity/fields/Number_of_Meters__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Meters__c</fullName>
    <description>Field to track the number of meters  to be connected</description>
    <label>Number of Meters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>