unpackaged/main/default/objects/Opportunity/fields/Number_of_Meters_Working_From_Contract__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Meters_Working_From_Contract__c</fullName>
    <formula>Contract__r.Number_of_Meters_Working_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Meters Working From Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>