unpackaged/main/default/objects/Opportunity/fields/Obsolete_Product__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Product__c</fullName>
    <label>Obsolete_Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Contract_or_Renewal__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>RALS Plus</fullName>
                <default>true</default>
                <label>RALS Plus</label>
            </value>
            <value>
                <fullName>RALS Freedom</fullName>
            </value>
            <value>
                <fullName>ICU Tracker</fullName>
            </value>
            <value>
                <fullName>Gluco Stabilizer</fullName>
            </value>
            <value>
                <fullName>GlucoTracker</fullName>
            </value>
            <value>
                <fullName>RALS Lite</fullName>
            </value>
            <value>
                <fullName>TGCM</fullName>
            </value>
            <value>
                <fullName>TGC-NBI</fullName>
            </value>
            <value>
                <fullName>AegisPOC</fullName>
            </value>
            <value>
                <fullName>PRISMPOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>