unpackaged/main/default/objects/Opportunity/fields/of_Authorized_Sites__c.field-meta.xml
<CustomField>
    <fullName>of_Authorized_Sites__c</fullName>
    <description>Formula that will return the # of Authorized Sites associated with the contract that a opportunity is associated with</description>
    <formula>Contract__r.of_Authorized_Sites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Authorized Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>