unpackaged/main/default/objects/Opportunity/fields/of_Modules_Licensed__c.field-meta.xml
<CustomField>
    <fullName>of_Modules_Licensed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number field to document the number of module licensed for the system; will contribute to the project score</description>
    <label>* # of Modules Licensed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>