unpackaged/main/default/objects/Opportunity/fields/of_Special_Terms_Tied_To_Contract__c.field-meta.xml
<CustomField>
    <fullName>of_Special_Terms_Tied_To_Contract__c</fullName>
    <formula>Contract__r.Number_of_Special_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Special Terms- Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>