unpackaged/main/default/objects/Opportunity/fields/One_Abbott_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>One_Abbott_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that an opportunity is associated with One Abbott</inlineHelpText>
    <label>One Abbott Opportunity</label>
    <type>Checkbox</type>
</CustomField>