unpackaged/main/default/objects/Opportunity/fields/Operations_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Operations_Review_Completed__c</fullName>
    <description>Checkbox that will document the date/Time that operations finished review of opportunity record, thus deeming it ready for project creation</description>
    <label>Operations Review Completed</label>
    <type>DateTime</type>
</CustomField>