unpackaged/main/default/objects/Opportunity/fields/Opportunity_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Auto_Number__c</fullName>
    <description>Autonumber that will serve two purposes.  Will be an external identifier that can be used by integrated systems such as finance.  Will also serve as the basis for the unique identifier for the name of the opportunity.</description>
    <displayFormat>O-{MM}{DD}{YY} {00000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity Auto Number</label>
    <type>AutoNumber</type>
</CustomField>