unpackaged/main/default/objects/Opportunity/fields/Opportunity_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Campaign__c</fullName>
    <description>OUS lead campaign list requested by Ludo - 3/3/2020</description>
    <label>Opportunity Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upsell campaign</fullName>
            </value>
            <value>
                <fullName>E-learning campaign</fullName>
            </value>
            <value>
                <fullName>Manual test Campaign</fullName>
            </value>
            <value>
                <fullName>Vendors campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>