unpackaged/main/default/objects/Opportunity/fields/Opportunity_change_field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_change_field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>custom field to use as a way of determining if a opp record has been changed during an import via the data loader.  This will test is workflow triggers should be set-off.</description>
    <label>Opportunity change field</label>
    <type>Checkbox</type>
</CustomField>