unpackaged/main/default/objects/Opportunity/fields/Opportunity_Generator__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Generator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OUS Implementations team member who was the source of this lead</description>
    <inlineHelpText>OUS Implementations team member who was the source of this lead</inlineHelpText>
    <label>Opportunity Generator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>OUS Operations</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>