unpackaged/main/default/objects/Opportunity/fields/Opportunity_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment__c</fullName>
    <description>Field that will provide business segment for all RALS Opportunities.  Will delineate by New or Renewal business and whether it is in the blood-glucose or non-blood-glucose market</description>
    <label>Opportunity Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Business - Glucose</fullName>
            </value>
            <value>
                <fullName>New Business - Non-Glucose</fullName>
            </value>
            <value>
                <fullName>Renewal Business - Glucose</fullName>
            </value>
            <value>
                <fullName>Renewal Business - Non-Glucose</fullName>
            </value>
            <value>
                <fullName>Addition to Existing Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>