unpackaged/main/default/objects/Opportunity/fields/OpportunityOwnerIs_User__c.field-meta.xml
<CustomField>
    <fullName>OpportunityOwnerIs_User__c</fullName>
    <description>Formula for reporting. Checks to see if the logged in user is the project owner.</description>
    <formula>IF( OR(Opportunity_Owner_ID__c = $User.Id,Regional_Account_Manager__c = $User.Id)=TRUE, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpportunityOwnerIs$User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>