unpackaged/main/default/objects/Opportunity/fields/Order_of_License_Signing__c.field-meta.xml
<CustomField>
    <fullName>Order_of_License_Signing__c</fullName>
    <label>Order of License Signing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Signed First, AI to countersign and return</fullName>
            </value>
            <value>
                <fullName>AI signed First, Customer to Countersign and send to AI</fullName>
            </value>
            <value>
                <fullName>Government Solicitation Not a Signed License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>