unpackaged/main/default/objects/Opportunity/fields/Order_Prepaid_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Order_Prepaid_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Prepaid By Customer</label>
    <type>Checkbox</type>
</CustomField>