unpackaged/main/default/objects/Opportunity/fields/Override_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Override_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox that will only be visible to Sys Admin, will allow records to be edited/credited during data clean-up that will not trigger automatic communications to other departments (finance, sales reps etc...)</description>
    <label>Override Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>