unpackaged/main/default/objects/Opportunity/fields/Owner_Is_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_Is_User__c</fullName>
    <description>Field to return a 1 if the logged in user is the owner of the opportunity record.  This field can be used so a standard report can be used for all users</description>
    <formula>IF( OwnerId=$User.Id ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Is User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>