unpackaged/main/default/objects/Opportunity/fields/PAF_Amount__c.field-meta.xml
<CustomField>
    <fullName>PAF_Amount__c</fullName>
    <description>Field that will be entered by finance to track the total $ Amount associated with a Alere transaction.   The deal may or may not have RALS Connevtitity fees as a part of it......</description>
    <label>PAF Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>