unpackaged/main/default/objects/Opportunity/fields/Payment_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Payment_Arrangement__c</fullName>
    <inlineHelpText>Had to convert this to a multi-select picklist, so the validation rule would work.</inlineHelpText>
    <label>Payment Arrangement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Pay</fullName>
            </value>
            <value>
                <fullName>Customer Pay-annual invoice/multi-year</fullName>
            </value>
            <value>
                <fullName>Device Vendor Pay</fullName>
            </value>
            <value>
                <fullName>Vendor Pay-annual invoice/multi-year</fullName>
            </value>
            <value>
                <fullName>Roche Pay</fullName>
            </value>
            <value>
                <fullName>Combination Pay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CPT Monthly</fullName>
            </value>
            <value>
                <fullName>CPT Quarterly</fullName>
            </value>
            <value>
                <fullName>Distributor Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>