unpackaged/main/default/objects/Opportunity/fields/Place_Approval_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Place_Approval_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Place Approval On Hold</label>
    <type>Checkbox</type>
</CustomField>