unpackaged/main/default/objects/Opportunity/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>