unpackaged/main/default/objects/Opportunity/fields/Post_Install__c.field-meta.xml
<CustomField>
    <fullName>Post_Install__c</fullName>
    <label>Post Install Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interface - Interface Testing or Modification</fullName>
            </value>
            <value>
                <fullName>Interface - New Test/Cartridge/Profile</fullName>
            </value>
            <value>
                <fullName>Interface - Upgrade</fullName>
            </value>
            <value>
                <fullName>Interface- New ADT Interface</fullName>
            </value>
            <value>
                <fullName>Interface- New LIS Interface</fullName>
            </value>
            <value>
                <fullName>Training - Additional Training</fullName>
            </value>
            <value>
                <fullName>After Hours Support</fullName>
            </value>
            <value>
                <fullName>Hourly Service Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>