unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_ID__c</fullName>
    <description>Formula to return the ID of the Primary Contact selected for the opportunity....</description>
    <formula>Primary_Customer_Contact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact ID</label>
    <type>Text</type>
</CustomField>