unpackaged/main/default/objects/Opportunity/fields/Primary_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>field that will establish a relationshop between a opportunity and the primary customer contact.  With this relationshiop, the system can send automatic communications (SOW Template, customer project closure messages etc....)</description>
    <label>Primary Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>