unpackaged/main/default/objects/Opportunity/fields/Primary_Customer_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Contact_Info__c</fullName>
    <description>Formula field that will include the name and contact information of the contact designated as the primary contact</description>
    <formula>Primary_Customer_Contact__r.FirstName +" "+Primary_Customer_Contact__r.LastName&amp; BR() &amp; 
TEXT( Primary_Customer_Contact__r.Description_of_Role_or_Function__c )&amp; BR() &amp; 
Primary_Customer_Contact__r.Account.Name&amp; BR() &amp;
Primary_Customer_Contact__r.Phone&amp; BR() &amp; 
Primary_Customer_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer Contact Info</label>
    <type>Text</type>
</CustomField>