unpackaged/main/default/objects/Opportunity/fields/Primary_Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_First_Name__c</fullName>
    <description>Used for getfeedback</description>
    <formula>Primary_Customer_Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer First Name</label>
    <type>Text</type>
</CustomField>