unpackaged/main/default/objects/Opportunity/fields/Primary_Customer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_s_Email__c</fullName>
    <description>Used with getfeedback</description>
    <label>Primary Customer's Email</label>
    <type>Email</type>
</CustomField>