unpackaged/main/default/objects/Opportunity/fields/Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Formula__c</fullName>
    <formula>TEXT( Contract__r.RALS_Module__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>