unpackaged/main/default/objects/Opportunity/fields/Product_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Number__c</fullName>
    <formula>Contract__r.Product_Group_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>