unpackaged/main/default/objects/Opportunity/fields/Product_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Product_Nickname__c</fullName>
    <formula>CASE( Product_Formula__c , 
"Alere Hemostasis/Hematology/Immunoassay", "A- EPOC", 
"Alere Cardiac Marker", "B- TRIAGE",
"Alere Molecular", "C- ALERE I","D- OTHER MODULES")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Nickname</label>
    <type>Text</type>
</CustomField>