unpackaged/main/default/objects/Opportunity/fields/Project_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_External_ID__c</fullName>
    <description>field that will accept the project external ID via workflow when the project is created</description>
    <label>Project External ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>