unpackaged/main/default/objects/Opportunity/fields/Project_Has_Been_Created__c.field-meta.xml
<CustomField>
    <fullName>Project_Has_Been_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Has Been Created</label>
    <type>Checkbox</type>
</CustomField>