unpackaged/main/default/objects/Opportunity/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>This field will help track "where we are"with a new install or renewal.</description>
    <label>Project Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>New_Contract_or_Renewal__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Activity</fullName>
                <default>true</default>
                <label>No Activity</label>
            </value>
            <value>
                <fullName>Account Contacted Re: Renewal</fullName>
            </value>
            <value>
                <fullName>Pricing sent to RBM or Vendor rep</fullName>
            </value>
            <value>
                <fullName>Pricing Options Sent to Account</fullName>
            </value>
            <value>
                <fullName>License/Exhibit A Requested</fullName>
            </value>
            <value>
                <fullName>License/Exhibit Sent Out</fullName>
            </value>
            <value>
                <fullName>Verbal Close</fullName>
            </value>
            <value>
                <fullName>Purchase Order Received</fullName>
            </value>
            <value>
                <fullName>PO Received, need License Agreement</fullName>
            </value>
            <value>
                <fullName>Signed License Agreement</fullName>
            </value>
            <value>
                <fullName>Signed exhibit A, Need PO</fullName>
            </value>
            <value>
                <fullName>POF processed to Operations(Closed)</fullName>
            </value>
            <value>
                <fullName>Project Manager Assigned - ISWs Sent</fullName>
            </value>
            <value>
                <fullName>Phase I ISW completed by account</fullName>
            </value>
            <value>
                <fullName>Phase II ISW completed by Account</fullName>
            </value>
            <value>
                <fullName>Install Scheduled</fullName>
            </value>
            <value>
                <fullName>Installation Complete, Needs Interface</fullName>
            </value>
            <value>
                <fullName>Interface Engineer Assigned</fullName>
            </value>
            <value>
                <fullName>Integrated Testing</fullName>
            </value>
            <value>
                <fullName>Installation Complete, Interface Live</fullName>
            </value>
            <value>
                <fullName>ADS Quote &amp; Directions sent to customer</fullName>
            </value>
            <value>
                <fullName>worksheet completed, need PO</fullName>
            </value>
            <value>
                <fullName>PO received, need worksheet</fullName>
            </value>
            <value>
                <fullName>PO &amp; worksheet received</fullName>
            </value>
            <value>
                <fullName>Order sent to Service Dept.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>