unpackaged/main/default/objects/Opportunity/fields/Projected_Project_Closure__c.field-meta.xml
<CustomField>
    <fullName>Projected_Project_Closure__c</fullName>
    <description>Field that will capture a date that represents the date the ensuing project should wrap up if the opportunity closed on its close date.</description>
    <formula>CloseDate  +  Avg_Days_Of_Implementation__c</formula>
    <label>Projected Project Closure</label>
    <type>Date</type>
</CustomField>